index.html Fixed malformed <h1> and title. Kept content but adjusted brand text.
styles.css
Converted .viewport into a horizontal scroll container with scroll-snap-type: x mandatory.
Each .card is now flex: 0 0 100vw and height: 100vh with no border-radius or box-shadow (no black boundaries).
Removed vertical stacking margin and mobile tweaks to work in horizontal layout.

script.js
Replaced vertical scrollIntoView logic with horizontal container.scrollTo(...).
Added keyboard left/right navigation.
Preserved History API behavior (/ and /projects).

--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
   <body>
     <div class="site-bg"></div>
 
-    <main class="viewport">
+    <main class="viewport" role="main">
       <section id="home" class="card">
         <header class="topbar">
           <div class="brand">Almaz Orymbetov *</div>
           <div class="role">Mechanical and Aerospace Engineering Student</div>
-          <nav class="nav">
-            <a href="#projects" data-link="projects">Featured Work</a>
-            <a href="#about">About</a>
-            <a href="mailto:hello@almazorymbetov.com">Contact</a>
-          </nav>
         </header>
 
         <div class="hero">
