--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>almazorymbetov.com</title>
+    <title>Hi!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -12,13 +12,13 @@
     <main class="viewport" role="main">
       <section id="home" class="card">
         <header class="topbar">
-          <div class="brand">Almaz Orymbetov *</div>
+          <div class="brand">Almaz Orymbetov * 2025</div>
           <div class="role">Mechanical and Aerospace Engineering Student</div>
         </header>
 
         <div class="hero">
           <div class="hero-left">
-            <h1 class="site-name">almazorymbetov.com</h1>
+            <h1 class="site-name">almaz orymbetov</h1>
           </div>
           <div class="hero-right">
             <div class="abstract-shape" aria-hidden="true"></div>
@@ -27,20 +27,20 @@
 
         <footer class="card-footer">
           <ul class="contacts">
-            <li><a href="mailto:hello@almazorymbetov.com">Email</a></li>
-            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a></li>
-            <li><a href="https://github.com/" target="_blank" rel="noopener">GitHub</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+            <li><a href="mailto:almaz.orymbetov@icloud.com">email</a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener">linkedin</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noopener">github</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener">instagram</a></li>
           </ul>
 
-          <div class="page-counter">01/02</div>
+          <div class="page-counter">first page</div>
         </footer>
       </section>
 
       <section id="projects" class="card projects">
         <header class="projects-header">
-          <a href="#" data-link="home" class="back">← Back</a>
-          <h2>Projects</h2>
+          <a href="#" data-link="home" class="back">← back</a>
+          <h2>projects</h2>
         </header>
 
         <div class="projects-body">
@@ -48,7 +48,7 @@
         </div>
 
         <footer class="card-footer small">
-          <div class="page-counter">02/02</div>
+          <div class="page-counter">second page</div>
         </footer>
       </section>
     </main>
