--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <main class="viewport" role="main">
       <section id="home" class="card">
         <header class="topbar">
-          <div class="brand">Almaz Orymbetov * 2025</div>
-          <div class="role">Mechanical and Aerospace Engineering Student</div>
+          <div class="topbar-center">
+            <div class="brand">Almaz Orymbetov * 2025</div>
+            <div class="role">Mechanical and Aerospace Engineering Student</div>
+          </div>
         </header>
 
         <div class="hero">
           <div class="hero-left">
             <h1 class="site-name">almaz orymbetov</h1>
+            <p class="subtitle">btw can shower</p>
           </div>
           <div class="hero-right">
             <div class="abstract-shape" aria-hidden="true"></div>
@@ -27,28 +30,31 @@
 
         <footer class="card-footer">
           <ul class="contacts">
-            <li><a href="mailto:almaz.orymbetov@icloud.com">email</a></li>
-            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener">linkedin</a></li>
-            <li><a href="https://github.com/" target="_blank" rel="noopener">github</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener">instagram</a></li>
+            <li><a href="mailto:almaz.orymbetov@icloud.com" title="email" class="icon">✉</a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener" title="linkedin" class="icon">in</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noopener" title="github" class="icon">⚙</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" title="instagram" class="icon">📷</a></li>
           </ul>
 
-          <div class="page-counter">first page</div>
+          <div class="page-counter nav-arrow"><span data-link="projects" style="cursor:pointer">→</span></div>
         </footer>
       </section>
 
       <section id="projects" class="card projects">
         <header class="projects-header">
-          <a href="#" data-link="home" class="back">← back</a>
           <h2>projects</h2>
         </header>
 
         <div class="projects-body">
-          <!-- Intentionally left empty — no portfolio yet -->
+          <div class="project-cards">
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+            <div class="project-card"></div>
+          </div>
         </div>
 
         <footer class="card-footer small">
-          <div class="page-counter">second page</div>
+          <div class="page-counter nav-arrow"><span data-link="home" style="cursor:pointer">←</span></div>
         </footer>
       </section>
     </main>
