--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <section id="home" class="card">
         <header class="topbar">
           <div class="topbar-center">
-            <div class="brand">Almaz Orymbetov * 2025</div>
-            <div class="role">Mechanical and Aerospace Engineering Student</div>
+            <div class="brand">idk what to add yo * 2025</div>
+            <div class="role">mechanical & aerospace engineering student</div>
           </div>
         </header>
 
         <div class="hero">
           <div class="hero-left">
             <h1 class="site-name">almaz orymbetov</h1>
-            <p class="subtitle">btw can shower</p>
+            <p class="subtitle">can I shower?</p>
           </div>
           <div class="hero-right">
             <div class="abstract-shape" aria-hidden="true"></div>
