--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section id="home" class="card">
         <header class="topbar">
           <div class="topbar-center">
-            <div class="brand">idk what to add yo * 2025</div>
+            <div class="brand">class of 2029 at NU</div>
             <div class="role">mechanical & aerospace engineering student</div>
           </div>
         </header>
@@ -21,7 +21,7 @@
         <div class="hero">
           <div class="hero-left">
             <h1 class="site-name">almaz orymbetov</h1>
-            <p class="subtitle">can I shower?</p>
+            <p class="subtitle">you can scroll to the right to see my projects</p>
           </div>
           <div class="hero-right">
             <div class="abstract-shape" aria-hidden="true"></div>
@@ -30,10 +30,10 @@
 
         <footer class="card-footer">
           <ul class="contacts">
-            <li><a href="mailto:almaz.orymbetov@icloud.com" title="email" class="icon">✉</a></li>
-            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener" title="linkedin" class="icon">in</a></li>
-            <li><a href="https://github.com/" target="_blank" rel="noopener" title="github" class="icon">⚙</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" title="instagram" class="icon">📷</a></li>
+            <li><a href="mailto:almaz.orymbetov@icloud.com" title="email" class="icon">📧</a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener" title="linkedin" class="icon">💼</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noopener" title="github" class="icon">🔧</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" title="instagram" class="icon">📸</a></li>
           </ul>
 
           <div class="page-counter nav-arrow"><span data-link="projects" style="cursor:pointer">→</span></div>
