--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="site-bg"></div>
+    <div class="site-bg">
+      <div class="bg-orb orb-1"></div>
+      <div class="bg-orb orb-2"></div>
+      <div class="bg-orb orb-3"></div>
+    </div>
 
     <main class="viewport" role="main">
       <section id="home" class="card">
@@ -30,10 +34,10 @@
 
         <footer class="card-footer">
           <ul class="contacts">
-            <li><a href="mailto:almaz.orymbetov@icloud.com" title="email" class="icon">📧</a></li>
-            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener" title="linkedin" class="icon">💼</a></li>
-            <li><a href="https://github.com/" target="_blank" rel="noopener" title="github" class="icon">🔧</a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" title="instagram" class="icon">📸</a></li>
+            <li><a href="mailto:almaz.orymbetov@icloud.com" title="email">mail</a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener" title="linkedin">linkedin</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noopener" title="github">github</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" title="instagram">insta</a></li>
           </ul>
 
           <div class="page-counter nav-arrow"><span data-link="projects" style="cursor:pointer">→</span></div>
